--- a/main.css
+++ b/main.css
@@ -1,14 +1,50 @@
+@font-face {
+    font-family: 'Neutral Face';
+    src: url("./fonts//NeutralFace.otf") format("opentype");
+}
+
+@font-face{
+    font-family: 'Neutral Face';
+    font-weight: bold;
+    src: url("./fonts/NeutralFace-Bold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'Typewriter Medium';
+    src: url("./fonts/rm_typerighter_medium.ttf");
+}
+
 html, body{
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     min-width: 100vw;
 }
 
-#that-is-it{
-    height: 100vh;
-    width: 100vw;
-    /* background: rgb(175, 4, 4); */
-    /* border: 1em black solid; */
+
+.font-azeret{
+    font-family: 'Azeret Mono', monospace;
+}
+
+
+.off-white {
+    background: #F9F9F9;
+}
+
+.layer{
+    position: absolute;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+}
+
+.banner-name{
+    font-family: 'Neural Face', sans-serif;
+    font-weight: bold;
+}
+
+#landing-canvas{
+    position: absolute;
+    z-index: 0;
 }
 
